--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sourcemapcmd",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Command line tool to resolve source file references with source maps",
   "main": "bin/run.js",
   "bin": {
@@ -26,6 +26,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "msw": "^1.2.5"
   }
 }
